# Flex

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  Taskfile.yml  compose.yml  package.json  pnpm-workspace.yaml
libs/cargo/flex-chat/: Cargo.toml
libs/cargo/flex-chat-channel/: Cargo.toml
libs/cargo/flex-chat-channel/src/: interface.rs  lib.rs  member.rs  mode.rs  permission.rs  topic.rs
libs/cargo/flex-chat-channel/src/interface/: access_control_interface.rs  member_interface.rs  session_interface.rs  settings_interface.rs  topic_interface.rs
libs/cargo/flex-chat-channel/src/mode/: access_control.rs  access_level.rs  settings.rs
libs/cargo/flex-chat-channel/src/validation/: channel_name.rs
libs/cargo/flex-chat-client/: Cargo.toml
libs/cargo/flex-chat-client/src/: interface.rs  lib.rs  origin.rs  socket.rs
libs/cargo/flex-chat-client/src/interface/: application.rs  session.rs  socket.rs
libs/cargo/flex-chat/infra/: Cargo.toml
libs/cargo/flex-chat/infra/src/: channel.rs  client.rs  lib.rs  socket.rs
libs/cargo/flex-chat/macro/: Cargo.toml
libs/cargo/flex-chat/macro/src/: command_formdata.rs  command_responses.rs  lib.rs
libs/cargo/flex-chat/src/: channel.rs  lib.rs  mode.rs  user.rs
libs/cargo/flex-chat/src/channel/: interface.rs  member.rs  mode.rs  permission.rs  topic.rs
libs/cargo/flex-chat/src/client/: interface.rs  mod.rs  socket.rs
libs/cargo/flex-chat/src/user/: host.rs  interface.rs  nick.rs
libs/cargo/flex-database/: Cargo.toml
libs/cargo/flex-database/src/: error.rs  interface.rs
libs/cargo/flex-database/src/sgbd/: postgres.rs
libs/cargo/flex-database/tests/: connection_postgres.rs
libs/cargo/flex-fs/: Cargo.toml
libs/cargo/flex-fs/src/: copy_dir.rs  error.rs  extension.rs  lib.rs  load.rs  load_or_prompt.rs
libs/cargo/flex-kernel/: Cargo.toml
libs/cargo/flex-kernel/examples/: fetch-config.rs  kernel-async-context.rs  kernel-cli-args.rs  kernel-env-vars.rs  kernel-fetch-config.rs  kernel-logger-config.rs  kernel-logger.rs  kernel-simple.rs  logger-config.rs  logger.rs
libs/cargo/flex-kernel/examples/external_crate/: mod.rs
libs/cargo/flex-kernel/macro/: Cargo.toml
libs/cargo/flex-kernel/macro/src/: lib.rs
libs/cargo/flex-kernel/src/: kernel.rs  lib.rs
libs/cargo/flex-kernel/src/kernel/: error.rs  settings.rs
libs/cargo/flex-kernel/src/logger/: settings.rs  signal.rs
libs/cargo/flex-kernel/src/macro_rules/: mod.rs  using.rs
libs/cargo/flex-logger/: Cargo.toml
libs/cargo/flex-logger/examples/: logger-simple.rs
libs/cargo/flex-logger/src/: builder.rs  initiator.rs  lib.rs  noop.rs
libs/cargo/flex-logger/src/layout/: cell.rs  grid.rs  mod.rs  row.rs  style.rs
libs/cargo/flex-logger/src/stdout/: builder.rs  extension.rs  mod.rs
libs/cargo/flex-prompt/: Cargo.toml
libs/cargo/flex-prompt/macro/: Cargo.toml
libs/cargo/flex-prompt/macro/src/: derive.rs  lib.rs
libs/cargo/flex-prompt/src/: default.rs  error.rs  for_loop.rs  interface.rs  lib.rs  optional.rs  required.rs
libs/cargo/flex-web-framework/: Cargo.toml
libs/cargo/flex-web-framework/macro/: Cargo.toml
libs/cargo/flex-web-framework/macro/js/: form.js  form_link.js
libs/cargo/flex-web-framework/macro/src/: lib.rs
libs/cargo/flex-web-framework/src/: adapter.rs  lib.rs
libs/cargo/flex-web-framework/src/adapter/: axum.rs  mod.rs
libs/cargo/flex-web-framework/src/database/: mod.rs  query_builder.rs  service.rs
libs/cargo/flex-web-framework/src/extension/: cookie.rs  cors.rs  ext.rs  feature.rs  mod.rs  session.rs
libs/cargo/flex-web-framework/src/extract/: form.rs  mod.rs
libs/cargo/flex-web-framework/src/http/: context.rs  cookies.rs  method.rs  mod.rs  request.rs  response.rs
libs/cargo/flex-web-framework/src/interface/: cookie.rs  cors.rs  ext.rs  extension.rs  feature.rs  mod.rs  router.rs  state.rs  view.rs
libs/cargo/flex-web-framework/src/json_rpc/: error.rs  handler.rs  mod.rs  resources.rs
libs/cargo/flex-web-framework/src/routing/: builder.rs  collection.rs  mod.rs  router.rs
libs/cargo/flex-web-framework/src/security/: mod.rs  service.rs
libs/cargo/flex-web-framework/src/server/: error.rs  mod.rs  settings.rs  state.rs
libs/cargo/flex-web-framework/src/settings/: cookie.rs  cors.rs  mod.rs  server.rs
libs/cargo/flex-web-framework/src/types/: mod.rs  port.rs  secret.rs  time.rs
libs/cargo/flex-web-framework/src/view/: mod.rs
www/flex/: Cargo.toml  app.rs
www/flex-ws-server/: Cargo.toml  app.rs  constant.rs
www/flex-ws-server/commands/: make_password.rs
www/flex-ws-server/config/: flex.rs
www/flex-ws-server/macro_rules/: command_formdata.rs  command_responses.rs  error_replies.rs  reserved_numerics.rs
www/flex-ws-server/src/chat/: feature.rs  mod.rs  routes.rs
www/flex-ws-server/src/chat/controllers/: home.rs
www/flex-ws-server/src/chat/sessions/: channel.rs  client.rs
www/flex/commands/: make_password.rs  mod.rs
www/flex/config/: chat.rs  env.rs
www/flex/features/accounts/: feature.rs  mod.rs
www/flex/features/accounts/dto/: update_account_dto.rs  user_account_session_dto.rs
www/flex/features/accounts/entities/: account_entity.rs
www/flex/features/accounts/forms/: account_update_form.rs
www/flex/features/accounts/repositories/: account_repository.rs
www/flex/features/accounts/routes/: api.rs
www/flex/features/accounts/services/: account_service.rs
www/flex/features/auth/: feature.rs  mod.rs  routes.rs
www/flex/features/auth/controllers/: login_controller.rs  logout_controller.rs  signup_controller.rs  users_controller.rs
www/flex/features/auth/dto/: user_cookie_dto.rs
www/flex/features/auth/entities/: user_entity.rs
www/flex/features/auth/routes/: api.rs  (+1 more)
www/flex/features/avatars/: feature.rs  mod.rs
www/flex/features/chat/: feature.rs  mod.rs  routes.rs
www/flex/features/generate/: feature.rs  mod.rs  routes.rs
www/flex/features/hello_world/: feature.rs  mod.rs
www/flex/features/users/: feature.rs  mod.rs
www/flex/public/css/: auth.css  normalizer.css  style.css
www/flex/public/geo/: countries.json
www/flex/templates/layouts/: base_layout.rs
(+2710 files in other folders)
