[workspace]
members = ["libs/cargo/*", "www/flex"]
resolver = "3"

[workspace.package]
# name = "flex"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.lints.rust]
async_fn_in_trait = "allow"
# dead_code = "allow"
non_camel_case_types = "allow"
# unsafe_code = "forbid"
[workspace.lints.clippy]
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
async-trait = "^0.1.88"
chrono = { version = "^0.4.40", features = ["clock", "serde"] }
clap = { version = "^4.5.35", features = ["derive"] }
console = { version = "^0.15.11" }
dashmap = { version = "^6.1.0", features = ["serde"] }
dns-lookup = "^2.0.4"
flex-cli = { path = "libs/cargo/flex-cli" }
flex-crypto = { path = "libs/cargo/flex-crypto" }
flex-kernel = { path = "libs/cargo/flex-kernel", features = ["tracing"] }
flex-serde-validation = { path = "libs/cargo/flex-serde-validation" }
flex-web-framework = { path = "libs/cargo/flex-web-framework" }
log = { version = "^0.4.27" }
regex = { version = "^1.11.1" }
rpc-router = { version = "0.1.3" }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = { version = "^1.0.140" }
# Les versions 13+ de socketioxide semblent contenir des problèmes de performences.
socketioxide = { version = "0.12.0", features = ["extensions", "state"] }
sqlx = { version = "^0.8.3", features = ["chrono", "postgres", "uuid"] }
syn = { version = "^2.0.100", features = ["full"] }
thiserror = { version = "^2.0.12" }
tokio = { version = "^1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "^0.1.41" }
uuid = { version = "^1.16.0", features = ["v4", "v7", "serde"] }
