[package]
name = "flex-ws-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_flex_ws_server"
path = "./app.rs"

[[bin]]
name = "flex-ws-server"
path = "./bin/ws-server.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
dashmap = { version = "5.5.3", features = ["serde"] }
dns-lookup = "2.0.4"
flex-cli = { workspace = true }
flex-crypto = { workspace = true }
flex-serde-validation = { workspace = true }
flex-web-framework = { workspace = true }
lexa-kernel = { workspace = true }
lexa-logger = { version = "0.3.2" }
paste = { version = "1.0.14" }
serde = { workspace = true }
socketioxide = { version = "0.10.2", features = ["extensions", "state"] }
tokio = { workspace = true }
tracing = { workspace = true }
