[package]
name = "flex"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "lib_flex"
path = "./app.rs"

[[bin]]
name = "flex"
path = "./bin/flex.rs"

[dependencies]
flex-chat = { path = "../../libs/cargo/flex-chat" }
# flex-chat-macro = { path = "../../libs/cargo/flex-chat-macro" }

clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
dns-lookup = { workspace = true }
flex-cli = { workspace = true }
flex-crypto = { workspace = true }
flex-logger = { path = "../../libs/cargo/flex-logger" }
flex-serde-validation = { workspace = true }
flex-web-framework = { workspace = true }
flex-kernel = { workspace = true }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
socketioxide = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
