[package]
name = "flex-chat-channel"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
flex-chat-mode = { path = "../flex-chat-mode" }
flex-chat-user = { path = "../flex-chat-user" }
flex-secret = { path = "../flex-secret" }
flex-wildcard-matching = { path = "../flex-wildcard-matching" }

chrono = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
