[package]
name = "flex-fs"
version = "0.1.0"
edition = "2021"
description = "Utilitaires liés au fs pour les projets."

[lints]
workspace = true

[features]
explorer = ["dep:open"]

[dependencies]
flex-env = { path = "../flex-env" }
flex-prompt = { path = "../flex-prompt" }

console = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
open = { version = "5.1.3", optional = true }
serde_yaml = { version = "0.9.33" } # DEPRECATED: chercher une nouvelle crate
serde_toml = { version = "0.8.13", package = "toml" }
