[package]
name = "flex-prompt"
description = "Utilitaires lié aux entrées utilisateur, IO."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
flex-prompt-macro = { path = "macro" }
inquire = { version = "0.7.5" }
log = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
