[package]
name = "flex-prompt"
description = "Utilitaires lié aux entrées utilisateur, IO."
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
flex-prompt-macro = { path = "macro" }
inquire = { version = "0.7.5" }
log = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
