[package]
name = "flex-web-framework"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["rand"] }
axum = { version = "0.7.7", features = ["multipart"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-client-ip = { version = "0.6.0" }
chrono = { workspace = true }
console = { workspace = true }
dashmap = { workspace = true }
dns-lookup = { workspace = true }
email_address = { version = "0.2.9", features = ["serde"] }
flex-crypto = { workspace = true }
flex-database = { path = "../flex-database", features = ["postgres-sgbd"] }
flex-kernel = { workspace = true }
flex-secret = { path = "../flex-secret" }
flex-web-framework-macro = { path = "macro" }
html-escape = "0.2.13"
hyper = { version = "1.5.0" }
log = { workspace = true }
mime = "0.3.17"
rpc-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socketioxide = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.36", features = ["serde"] }
tokio = { workspace = true }
tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
tower-layer = { version = "0.3.3" }
tower-service = { version = "0.3.3" }
tower-sessions = { version = "0.13.0" }
url = { version = "2.5.2", features = ["serde"] }
uuid = { workspace = true }
