[package]
name = "flex-web-framework-macro"
version = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
lexa-syn = { version = "0.1.0" }
syn = { version = "2.0.52", features = ["full"] }
diagnostics = { package = "proc-macro2-diagnostics", version = "0.10.1", default-features = false }
rstml = { version = "0.11.2" }
uuid = { workspace = true }
