[package]
name = "flex-web-framework-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
flex-syn = { path = "../../flex-syn" }
diagnostics = { package = "proc-macro2-diagnostics", version = "0.10.1", default-features = false }
rstml = { version = "0.11.2" }
syn = { workspace = true }
uuid = { workspace = true }
